--- a/src/libs/vtools/dialogs/tools/dialogflippingbyaxis.ui
+++ b/src/libs/vtools/dialogs/tools/dialogflippingbyaxis.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>304</width>
-    <height>207</height>
+    <height>237</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -62,18 +62,38 @@
      <property name="checked">
       <bool>false</bool>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
-      <item>
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="0">
        <widget class="QLabel" name="labelGroupName">
         <property name="text">
          <string>Name:</string>
         </property>
        </widget>
       </item>
-      <item>
+      <item row="0" column="1">
        <widget class="QLineEdit" name="lineEditVisibilityGroup">
         <property name="text">
          <string>Flipping by axis</string>
+        </property>
+        <property name="clearButtonEnabled">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Tags:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="VCompleterLineEdit" name="lineEditGroupTags">
+        <property name="toolTip">
+         <string>Separate each tag with comma.</string>
+        </property>
+        <property name="placeholderText">
+         <string>Add tags</string>
         </property>
         <property name="clearButtonEnabled">
          <bool>true</bool>
@@ -95,6 +115,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>VCompleterLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>vlineedit.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections>
   <connection>
