--- a/src/libs/vtools/dialogs/tools/dialoggroup.ui
+++ b/src/libs/vtools/dialogs/tools/dialoggroup.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>397</width>
-    <height>80</height>
+    <width>294</width>
+    <height>104</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,21 +19,44 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="0" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
         <string>Group name:</string>
        </property>
       </widget>
      </item>
-     <item>
+     <item row="0" column="1">
       <widget class="QLineEdit" name="lineEditName">
        <property name="toolTip">
-        <string>Unique pattern piece name</string>
+        <string/>
        </property>
        <property name="placeholderText">
         <string>Choose group name</string>
+       </property>
+       <property name="clearButtonEnabled">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Tags:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="VCompleterLineEdit" name="lineEditTags">
+       <property name="toolTip">
+        <string>Separate each tag with comma.</string>
+       </property>
+       <property name="placeholderText">
+        <string>Add tags</string>
+       </property>
+       <property name="clearButtonEnabled">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -51,6 +74,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>VCompleterLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>vlineedit.h</header>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="../../../vmisc/share/resources/icon.qrc"/>
  </resources>
