--- a/src/libs/vtools/dialogs/tools/dialogmove.ui
+++ b/src/libs/vtools/dialogs/tools/dialogmove.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>304</width>
-    <height>402</height>
+    <width>424</width>
+    <height>432</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -605,18 +605,38 @@
      <property name="checked">
       <bool>false</bool>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_3">
-      <item>
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="0">
        <widget class="QLabel" name="labelGroupName">
         <property name="text">
          <string>Name:</string>
         </property>
        </widget>
       </item>
-      <item>
+      <item row="0" column="1">
        <widget class="QLineEdit" name="lineEditVisibilityGroup">
         <property name="text">
          <string>Move</string>
+        </property>
+        <property name="clearButtonEnabled">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_5">
+        <property name="text">
+         <string>Tags:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="VCompleterLineEdit" name="lineEditGroupTags">
+        <property name="toolTip">
+         <string>Separate each tag with comma.</string>
+        </property>
+        <property name="placeholderText">
+         <string>Add tags</string>
         </property>
         <property name="clearButtonEnabled">
          <bool>true</bool>
@@ -639,6 +659,11 @@
   </layout>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>VCompleterLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>vlineedit.h</header>
+  </customwidget>
   <customwidget>
    <class>VPlainTextEdit</class>
    <extends>QPlainTextEdit</extends>
