--- a/src/libs/vtools/dialogs/tools/dialogrotation.ui
+++ b/src/libs/vtools/dialogs/tools/dialogrotation.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>392</width>
-    <height>252</height>
+    <height>282</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -236,18 +236,38 @@
      <property name="checked">
       <bool>false</bool>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
-      <item>
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="1" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Tags:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="lineEditVisibilityGroup">
+        <property name="text">
+         <string>Rotation</string>
+        </property>
+        <property name="clearButtonEnabled">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
        <widget class="QLabel" name="labelGroupName">
         <property name="text">
          <string>Name:</string>
         </property>
        </widget>
       </item>
-      <item>
-       <widget class="QLineEdit" name="lineEditVisibilityGroup">
-        <property name="text">
-         <string>Rotation</string>
+      <item row="1" column="1">
+       <widget class="VCompleterLineEdit" name="lineEditGroupTags">
+        <property name="toolTip">
+         <string>Separate each tag with comma.</string>
+        </property>
+        <property name="placeholderText">
+         <string>Add tags</string>
         </property>
         <property name="clearButtonEnabled">
          <bool>true</bool>
@@ -270,6 +290,11 @@
   </layout>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>VCompleterLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>vlineedit.h</header>
+  </customwidget>
   <customwidget>
    <class>VPlainTextEdit</class>
    <extends>QPlainTextEdit</extends>
