--- a/src/app/valentina/dialogs/dialogsavelayout.ui
+++ b/src/app/valentina/dialogs/dialogsavelayout.ui
@@ -252,7 +252,7 @@
              </size>
             </property>
             <property name="text">
-             <string>...</string>
+             <string notr="true">...</string>
             </property>
             <property name="icon">
              <iconset resource="../../../libs/vmisc/share/resources/icon.qrc">
