--- a/src/app/valentina/dialogs/dialoglayoutscale.ui
+++ b/src/app/valentina/dialogs/dialoglayoutscale.ui
@@ -158,7 +158,7 @@
             <item>
              <widget class="QDoubleSpinBox" name="doubleSpinBoxHorizontalScale">
               <property name="suffix">
-               <string>%</string>
+               <string notr="true">%</string>
               </property>
               <property name="decimals">
                <number>1</number>
@@ -180,7 +180,7 @@
             <item>
              <widget class="QDoubleSpinBox" name="doubleSpinBoxVerticalScale">
               <property name="suffix">
-               <string>%</string>
+               <string notr="true">%</string>
               </property>
               <property name="decimals">
                <number>1</number>
@@ -220,7 +220,7 @@
                </font>
               </property>
               <property name="text">
-               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:16pt;&quot;&gt;┐&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+               <string notr="true">&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:16pt;&quot;&gt;┐&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
               </property>
               <property name="alignment">
                <set>Qt::AlignCenter</set>
@@ -256,7 +256,7 @@
             <item alignment="Qt::AlignHCenter">
              <widget class="QLabel" name="label_8">
               <property name="text">
-               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:16pt; font-weight:600;&quot;&gt;┘&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+               <string notr="true">&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:16pt; font-weight:600;&quot;&gt;┘&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
               </property>
              </widget>
             </item>
